Gateway 추가